# VAST

./: .gitattributes  .gitignore  LICENCE  README.md  VAST_dataset.db  main.py  project_config.py  pyproject.toml
afbenchgen2/: generate_afs_from_java.py
afbenchgen2/src/main/java/net/sf/jAFBenchGen/jAFBenchGen/: BarabasiAF.java  Generator.java  WattsStrogatzAF.java
cos/: approval_based_social_af.py  attack_removal_semantics.py  baselines.py  collective_satisfaction_semantics.py  cos.py  helpers.py  judgement_aggregation.py  majority_rule.py
experiments/: config.py
experiments/classes/: VASThandler.py  generate_experiments_results.py  score_strategy.py
frameworks/: basic-example-2.apx  basic-example-3.apx  basic-example.apx  conflict-freeness.apx  continuity.apx  disagreement.apx  disagreement2.apx  extension-majority-2.apx  extension-majority.apx  many-extensions.apx  many-extensions2.apx  saf-example.apx  separability.apx  separability_1.apx  separability_2.apx  unanimity.apx
solver/: afsolver.py  asp.py
structure/: ABSAF_vote_strategy.py  argument.py  argumentation_framework.py  arguments.py  attack.py  attacks.py  basic_vote_strategy.py  extension.py  extensions.py  graph.py  labelling.py  opinion_based_af.py  vote.py  vote_generation_strategy.py
